# unifiguard

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-02-unifiguard-foundation.md
docs/superpowers/specs/: 2026-04-02-unifiguard-improvements-design.md
src/unifiguard/: logger.py
tests/: conftest.py  test_logger.py
