[project]
name = "unifiguard"
version = "0.1.0"
description = "WireGuard peer management for Ubiquiti USG networks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "paramiko>=3.0",
    "cryptography>=41.0",
    "requests>=2.31",
    "qrcode[pil]>=7.4",
    "rich>=13.0",
    "typer>=0.9",
]

[project.scripts]
unifiguard = "unifiguard.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
